--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,30 @@
         android:theme="@style/Theme.NavigationBar"
         tools:targetApi="31">
         <activity
+            android:name=".Quiz8"
+            android:exported="false" />
+        <activity
+            android:name=".Quiz7"
+            android:exported="false" />
+        <activity
+            android:name=".Quiz6"
+            android:exported="false" />
+        <activity
+            android:name=".Quiz5"
+            android:exported="false" />
+        <activity
+            android:name=".Quiz4"
+            android:exported="false" />
+        <activity
+            android:name=".Quiz3"
+            android:exported="false" />
+        <activity
+            android:name=".Quiz2"
+            android:exported="false" />
+        <activity
+            android:name=".Quiz"
+            android:exported="false" />
+        <activity
             android:name=".War4"
             android:exported="false" />
         <activity
